# ansible-desktop

./: .gitignore  Makefile  README.md  ansible.cfg  apply.sh  bootstrap.sh  proxy_env.yml  pyproject.toml  requirements.txt
.claude/skills/ansible-conventions/: SKILL.md
.claude/skills/apt-repos/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/github-release-version/: SKILL.md
.claude/skills/monitor-ci/: SKILL.md
.claude/skills/tidy-branch-history/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ansible-test.yml  super-linter.yml
collections/: requirements.yml
enviro/: local
enviro/group_vars/: all.yml
etc/: ansible_inc.sh  shell_inc.sh
inventories/: local
inventories/group_vars/: all.yml
lib/plugins/filter/: bs4.py
lib/plugins/modules/: apt_repository.py
playbooks/: linux-desktop.yml
roles/ansible/defaults/: main.yml
roles/ansible/meta/: main.yml
roles/ansible/tasks/: debian.yml  main.yml
roles/apt/defaults/: main.yml
roles/apt/files/: 00recommends
roles/apt/meta/: main.yml
roles/apt/tasks/: debian.yml  main.yml
roles/authnz/defaults/: main.yml
roles/authnz/handlers/: main.yml
roles/authnz/tasks/: debian.yml  main.yml
roles/authnz/tests/: test.yml
roles/authnz/vars/: main.yml
roles/backup/meta/: main.yml
roles/backup/tasks/: debian.yml  main.yml  ubuntu.yml
roles/backup/vars/: main.yml
roles/chef/defaults/: main.yml
roles/chef/meta/: main.yml
roles/chef/tasks/: debian.yml  main.yml  ubuntu.yml
roles/chrome/meta/: main.yml
roles/chrome/tasks/: debian.yml  main.yml  ubuntu.yml
roles/chrome/vars/: main.yml
roles/clamav/defaults/: main.yml
roles/clamav/handlers/: main.yml
(+197 files in other folders)
