[tool.poetry]
name = "ansible-desktop"
version = "0.1.0"
description = "Ansible roles to manage linux desktop"
authors = ["Matt Baker"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.19.1"
beautifulsoup4 = "^4.13.4"
cffi = "^1.17.1"
cryptography = "^45.0.2"
jinja2 = "^3.1.6"
markupsafe = "^3.0.2"
packaging = "^25.0"
pycparser = "^2.22"
pyyaml = "^6.0.2"
resolvelib = "^1.0.1"
soupsieve = "^2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
