[tool.poetry]
name = "ansible-desktop"
version = "0.1.0"
description = "Ansible roles to manage linux desktop"
authors = ["Matt Baker"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.20.2"
beautifulsoup4 = "^4.14.2"
cffi = "^2.0.0"
cryptography = "^46.0.3"
jinja2 = "^3.1.6"
markupsafe = "^3.0.3"
packaging = "^26.0"
pycparser = "^3.0"
pyyaml = "^6.0.3"
resolvelib = "^1.2.1"
soupsieve = "^2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
