[tool.poetry]
name = "ansible-desktop"
version = "0.1.0"
description = "Ansible roles to manage linux desktop"
authors = ["Matt Baker"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.20.2"
beautifulsoup4 = "*"
cffi = "*"
cryptography = "*"
jinja2 = "*"
markupsafe = "*"
packaging = "*"
pycparser = "*"
pyyaml = "*"
resolvelib = "*"
soupsieve = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
